--- a/src/Castle.css
+++ b/src/Castle.css
@@ -1,33 +1,115 @@
-.Castle {
-  display: flex;
-  border-bottom: 2px solid #eeeeee;
-  align-items: center;
-  justify-content: center;
-  font-weight: 400;
-  padding: 1rem;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.Castle-votes {
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  border-radius: 50%;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 300;
-  border: 3px solid red;
-  box-shadow: 0 10px 38px rgba(0, 0, 0, 0.2), 0 10px 12px rgba(0, 0, 0, 0.1);
+.castleBackground {
+  box-sizing: border-box;
+  background-color: rgb(1, 1, 37);
+  color: whitesmoke;
+  width: 500px;
+  margin: 0;
 }
 
-
-.Castle-buttons {
-  display: flex;
-  margin-right: 1rem;
-  align-items: center;
-  justify-content: center;
-  width: 15%;
+.image img {
+  width: 500px;
+  height: 260px;
+  /*margin: 0px 0px 25px 0px;*/
 }
 
 .castles {
+  position: relative;
   cursor: pointer;
+}
+
+.voteIcon img {
+  position: absolute;
+  width: 90px;
+  color: gray;
+  opacity: 50%;
+  top: 120px;
+  left: 370px;
+}
+
+.voteIcon img:hover {
+  position: absolute;
+  width: 90px;
+  color: whitesmoke;
+  opacity: 100%;
+  top: 120px;
+  left: 370px;
+  transition: opacity 0.5s;
+}
+
+.castleName {
+  display: flex;
+  padding: 15px 0px 15px 25px;
+  font-size: 1em;
+}
+
+.castleNameText {
+  font-weight: 300;
+  text-transform: uppercase;
+  top: -10px;
+  padding-right: 3px;
+  letter-spacing: 0.09em;
+}
+
+.castlePoints {
+  font-weight: normal;
+  font-size: 0.9em;
+}
+
+.infoText {
+  font-size: 0.9em;
+  text-align: justify;
+  line-height: 135%;
+  font-weight: normal !important;
+}
+
+.castleInfo {
+  box-sizing: border-box;
+  position: absolute;
+  width: 500px;
+  height: 265px;
+  margin-top: -317px;
+  padding-top: 4%;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: rgb(1, 1, 37);
+  opacity: 75%;
+}
+
+.InfoIcon img {
+  position: absolute;
+  margin-top: -8px;
+  margin-left: 400px;
+  width: 40px;
+  cursor: pointer;
+}
+
+.tooltip2 {
+  position: absolute;
+  display: inline-block;
+}
+
+.tooltip2 .tooltiptext2 {
+  visibility: hidden;
+  width: 120px;
+  top: -65px !important;
+  left: 340px;
+  background-color: whitesmoke;
+  font-size: 0.7em;
+  color: rgb(1, 1, 37);
+  text-align: center;
+
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+}
+
+.tooltip2:hover .tooltiptext2 {
+  visibility: visible;
 }
